# equity-trading-system

./: .gitignore  DEVELOPERS.md  Makefile  README.md  cluster_down.sh  cluster_up.sh  compiled-docker-compose.yml  k3s_manager.sh  locust_reload.sh  pyproject.toml  remote_cp_up.sh  remote_worker_up.sh
.github/workflows/: build-publish.yaml
api/: Dockerfile  README.md  pyproject.toml
api/app/: main.py
api/app/core/: database.py  logging.py  redis.py  security.py
api/app/middleware/: logging_middleware.py
api/app/routers/: accounts.py  auth.py  positions.py  trades.py
api/app/services/: account_services.py  auth_services.py  position_services.py  ticker_service.py  trade_services.py
backend/DB/: .env.example  compose.yml
backend/DB/redis-postgres-syncers/: .gitignore  Cargo.toml  Containerfile.trade-writer  compose.yaml  init.sql
backend/DB/redis-postgres-syncers/src/: trade-writer.rs
backend/DB/redis-postgres-syncers/test/: send_fake_trades.py
backend/FastAPI/: main.py  requirements.txt
backend/PubSub/: compose.yml
backend/k8s/: Makefile  compose.yml  k3d-config.yaml
backend/k8s/flux-system/: flux-kustomization.yaml
backend/k8s/flux-system/targets/: target-fork.yaml  target-max.yaml  target-upstream.yaml
backend/k8s/manifests/: 00-namespaces.yaml  01-booklib.yaml
backend/k8s/manifests/backend/: api-deployment.yaml  api-ingress.yaml  api-service.yaml
backend/k8s/manifests/base/: kustomization.yaml  namespaces.yaml
db/: README.md  init.sql
db/redis-postgres-syncers/: Cargo.toml  Containerfile  README.md  build_dev_images.nu
db/redis-postgres-syncers/src/: db-syncer.rs  helpers.rs  price-cacher.rs  price-timeseries-cacher.rs  redis-populator.rs  trade-writer.rs
frontend/: Dockerfile  account_picker.py  accounts_pages.py  api_client.py  app_ui.py  auth_pages.py  enter_trade_page.py  main.py  persistent_login.py  positions_pages.py  pyproject.toml  theme.py  trade_history_pages.py  users.db
k8s/: Dockerfile.toolbox  README.md
k8s/clusters/k3s/: target-k3s.yaml
k8s/flux-system/targets/: target-max.yaml  target-sean.yaml  target-upstream.yaml  target-will.yaml  target-yehuda.yaml
k8s/manifests/base/: namespaces.yaml
k8s/manifests/base/apps/: kustomization.yaml
k8s/manifests/base/data-layer/: kustomization.yaml
k8s/manifests/base/infrastructure/: kustomization.yaml
k8s/manifests/base/shared-config/: redis-config.env
locust/: README.md  locustfile.py
make/: chaos.mk  cluster.mk  db.mk  debug.mk  images.mk  k3s.mk  logs.mk  shell.mk  status.mk
web-ui/: README.md  account_picker.py  accounts_pages.py  api_client.py  app_ui.py  auth_pages.py  auth_state.py  enter_trade_page.py  mass_trade_page.py  persistent_login.py  positions_grid.py  positions_pages.py  pyproject.toml  trade_history_pages.py  trades_grid.py
web-ui/pages/: book_a_trade.py  edit_account.py  edit_trade.py  open_account.py  positions.py  trade_history.py
(+79 files in other folders)
