[project]
name = "equity-trading-system"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "booktype>=1.5",
    "fastapi>=0.128.8",
    "logbook>=1.9.2",
    "msgpack-python>=0.5.6",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pyjwt>=2.13.0",
    "streamlit>=1.50.0",
    "yfinance>=1.2.0",
]
