[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
    "streamlit-aggrid>=1.1.7",
    "pandas>=2.0.0",
    "pandas-stubs~=3.0.3",
]
