[package]
name = "redis-postgres-syncers"
version = "0.1.0"
edition = "2024"


[lib]
name = "helpers"
path = "src/helpers.rs"


[[bin]]
name = "trade-writer"
path = "src/trade-writer.rs"

[[bin]]
name = "db-syncer"
path = "src/db-syncer.rs"

[[bin]]
name = "redis-populator"
path = "src/redis-populator.rs"

[[bin]]
name = "price-cacher"
path = "src/price-cacher.rs"

[[bin]]
name = "price-timeseries-cacher"
path = "src/price-timeseries-cacher.rs"


[dependencies]
anyhow = "1.0"
bytes = "1.11"
csv = "1.4"
dotenvy = "0.15"
futures-util = "0.3"
jiff = "0.2"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13" }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
tokio-postgres = { version = "0.7" }
tracing = "0.1"
tracing-loki = { version = "0.2", default-features = false, features = [
    "rustls",
    "compat-0-2-1",
] }
tracing-subscriber = "0.3"
yahoo_finance_api = "4.1"
