[package]
name = "redis-postgres-syncers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trade-writer"
path = "src/trade-writer.rs"

# [[bin]]
# name = "db-syncer"
# path = "src/db-syncer.rs"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
tokio-postgres = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
futures-util = "0.3"
dotenvy = "0.15"
jiff = "0.2"
bytes = "1.11"
